@@ -3,6 +3,8 @@ Date	Added
 AS OF SVN REV. 5091, WE ARE NOW USING TRUNK.  ALL UNTESTED BUGFIXES/FEATURES GO INTO TRUNK.
 IF YOU HAVE A WORKING AND TESTED BUGFIX PUT IT INTO STABLE AS WELL AS TRUNK.
 
+2007/09/10
+	* Added config option to adjust exp gained by 'getexp' [ultramage]
 2007/09/09
 	* Removed bonus bAddEffWhenHitShort as it is unneeded and unused.
 	* Corrected getpetinfo so it actually returns "null" when there's no pet
