@@ -55,6 +55,9 @@ exp_bonus_max_attacker: 12
 // MVP bonus exp rate. (Note 2)
 mvp_exp_rate: 100
 
+// Rate of base/job exp given by NPCs. (Note 2)
+quest_exp_rate: 100
+
 // The rate of job exp. from using Heal skill (100 is the same as the heal amount, 200 is double.
 // The balance of the exp. rate is best used with 5 to 10)
 heal_exp: 0
